--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -21,8 +21,7 @@ metadata:
     nginx.ingress.kubernetes.io/upstream-keepalive-connections: "100"
 spec:
   rules:
-    - host: api.vehicle-platform.com
-      http:
+    - http:
         paths:
           - path: /api/v1/vehicle
             pathType: Prefix
